css fix for shifted 'show 10 entries'

--- a/fabui/assets/css/fabtotum.css
+++ b/fabui/assets/css/fabtotum.css
@@ -739,3 +739,9 @@ video::-webkit-media-controls-enclosure {
 video::-webkit-media-controls-panel {
     width: calc(100% + 30px); /* Adjust as needed */
 }
+/***
+*
+**/
+select.input-sm {
+	line-height: 10px !important;
+}
